--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,6 +1,6 @@
 <span class="relative inline-flex h-full w-full overflow-hidden rounded-full p-0.5" >
     <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#51a9e4_0%,#214255_50%,#51a9e4_100%)]" />
-    <div class="inline-flex items-center justify-center w-full px-3 py-1 text-sky-400 bg-black rounded-full cursor-pointer dark:bg-gray-800 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap">
+    <div class="inline-flex items-center justify-center w-full px-3 py-1 font-semibold text-sky-400 bg-black rounded-full cursor-pointer dark:bg-gray-800 dark:text-white/80 backdrop-blur-3xl whitespace-nowrap">
         <slot />
     </div>
 </span>
