--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,42 +1,54 @@
 ---
+import AstroIcon from '../icons/AstroIcon.astro';
 import HeartIcon from '../icons/Heart.astro';
+import TailwindIcon from '../icons/Tailwind.astro';
+
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <footer class="rounded-lg shadow m-4 bg-gray-800">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="flex flex-row items-center gap-x-3 text-sm text-gray-500 sm:text-center dark:text-gray-400">
+      <span class="flex flex-row items-center gap-x-2 text-sm text-gray-500 sm:text-center dark:text-gray-400">
         <p>
-            Made with
+            {t('footer.text1')} 
         </p> 
         <HeartIcon />
         <p>
-            by Omar
+            {t('footer.text2')} Astro
         </p>
+        <AstroIcon />
+        <p>
+            {t('footer.text3')} Tailwind
+        </p>
+        <TailwindIcon />
     </span>
     <ul class="flex flex-wrap gap-x-4 items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#inicio" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center"> 
-                Inicio
+            <a href="#home" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center"> 
+                {t('nav.home')}
             </a>
         </li>
         <li>
-            <a href="#formacion" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center">
-                Formacion 
+            <a href="#education" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center">
+                {t('nav.education')} 
             </a>
         </li>
         <li>
-            <a href="#experiencia" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center"> 
-                Experiencia 
+            <a href="#experience" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center"> 
+                {t('nav.experience')} 
             </a>
         </li>
         <li>
-            <a href="#proyectos" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center">
-                Proyectos 
+            <a href="#projects" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center">
+                {t('nav.projects')} 
             </a>
         </li>
         <li>
-            <a href="#sobremi" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center"> 
-                Sobre mi 
+            <a href="#aboutme" class="relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-gray-500 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center"> 
+                {t('nav.aboutme')} 
             </a>
         </li>
     </ul>
